<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">ConnecTech</string>
    <string name="offline">Please check your internet connection</string>
    <string name="login">Login</string>
    <string name="login_mayus">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_mayus">SIGN UP</string>
    <string name="search_device_connect_dongle">Search devices and connect with dongle</string>
    <string name="error_default">Error</string>
    <string name="obligation">Mandatory *</string>
    <string name="nicknamest">Nickname *</string>
    <string name="phone">Phone *</string>
    <string name="phone_number">Phone</string>
    <string name="passwordst">Password *</string>
    <string name="error"><i>(Error)</i></string>
    <string name="forgot"><u>Forgot your password?</u></string>
    <string name="pseudonym">Pseudonym</string>
    <string name="chamin">Minimum 10 characters</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="invalid_userorpass">Invalid username or password</string>
    <string name="user_blocked">User blocked</string>
    <string name="user_profile_required">User profile required</string>
    <string name="sendpass_mayus">SEND PASSWORD</string>
    <string name="sendpass">Send password</string>
    <string name="email">Email</string>
    <string name="verification_text">A SMS has been sent with \n
    the verification code at</string>
    <string name="eadressst">E-mail address *</string>
    <string name="retype_passsp">Retype password *</string>
    <string name="retype_pass">Retype password</string>
    <string name="continu">Continue</string>
    <string name="yourmail">your@mail.com</string>
    <string name="yourmobilephone">Your mobile phone</string>
    <string name="mobile_phonesp">Mobile phone number *</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="emailsp">E-mail *</string>
    <string name="loading">Loading…</string>
    <string name="cancelar">Cancel</string>
    <string name="vin_numbersp">VIN *</string>
    <string name="vin_number">VIN</string>
    <string name="car_modelsp">Car model *</string>
    <string name="serial_numbersp">Serial number *</string>
    <string name="serial_number">Serial Number </string>
    <string name="dealer_shipsp">Dealership *</string>
    <string name="dealer_ship">Dealership</string>
    <string name="autocall">Autocall to Call Center</string>
    <string name="car_owner">Car owner</string>
    <string name="countrysp">Country *</string>
    <string name="regionsp">Region *</string>
    <string name="locationsp">Location *</string>
    <string name="data_protection">  Privacy information protection act</string>
    <string name="legal">Service agreement</string>
    <string name="disclaimer">  Disclaimer</string>
    <string name="accept">Accept</string>
    <string name="the_number_is">The number is on the technical sheet</string>
    <string name="model_grade">Model and grade car</string>
    <string name="car_model">Car model</string>
    <string name="choose_a_dealer">Choose a dealer near your area</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="dd_mm_yy" translatable="false">YYYY-MM-DD</string>
    <string name="you_location">Your location</string>
    <string name="full_namesp">Full name *</string>
    <string name="full_name">Full name</string>
    <string name="sexsp">Sex *</string>
    <string name="birth_datesp">Birthdate *</string>
    <string name="birth_text">Birthdate </string>
    <string name="country_text">Country </string>
    <string name="region_text">Region </string>
    <string name="guiones" translatable="false">__</string>
    <string name="plate">Plate</string>
    <string name="plate_number">Plate number</string>
    <string name="search_dealership">Search dealer</string>
    <string name="dealer_ship_error">Dealership Error</string>
    <string name="region_error">Region Error</string>
    <string name="error_select_one_country"> First select one Country</string>
    <string name="title_my_drive">My Drive</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_communications">Communications</string>
    <string name="title_my_routes">My routes</string>
    <string name="title_my_profile">My profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_documents">Documents</string>
    <string name="country">Country</string>
    <string name="edit">EDIT</string>
    <string name="birthday">Birthdate</string>
    <string name="sex">Sex</string>
    <string name="region1">Region</string>
    <string name="location1">Location</string>
    <string name="address">Address</string>
    <string name="driving_license">Driving license</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="find_my_car">Find my car</string>
    <string name="nickname_prof" translatable="false">Green Artwuritwu</string>
    <string name="notifications_push">Notifications push</string>
    <string name="rewards">Rewards</string>
    <string name="barrita" translatable="false">/</string>
    <string name="privacy_profile">Privacy profile</string>
    <string name="rankings">Rankings</string>
    <string name="no_participate"><b>Not participate</b></string>
    <string name="participate"><b>Participate</b></string>
    <string name="visible_all">Visible to all</string>
    <string name="visible_friends">Visible to friends</string>
    <string name="no_visible">Not visible</string>
    <string name="friendship_invitation">Friendship invitation</string>
    <string name="user_post">User post</string>
    <string name="connectech_post">ConnecTech post</string>
    <string name="connectech_private_message">ConnecTech private message</string>
    <string name="dealer_post">Dealer post</string>
    <string name="dealer_private_message">Dealer private message</string>
    <string name="privacy_info">Privacy information protection act</string>
    <string name="connectech_ser">ConnecTech service agreement</string>
    <string name="add">ADD</string>
    <string name="delete">Delete</string>
    <string name="caracter_extraños" translatable="false">&lt;&gt;&quot;&apos;&amp;[]{}?¿!¡^*¨-_.,:;%/\|@·#$()=+-</string>
    <string name="caracter_extraños_excepcion_nums" translatable="false">&lt;&gt;&quot;&apos;&amp;[]{}?¿!¡^*¨_.,:;%/\|@·#$()=+0123456789</string>
    <string name="letras_especiales" translatable="false">ÁáÉéÍíÓóÚúÑñÄäËëÏïÖöÜüÀàÈèÌìÒòÙù</string>
    <string name="mileage">Mileage</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="title_tips">Tips</string>
    <string name="message">Message</string>
    <string name="eco_driving">Eco-driving</string>
    <string name="safety_driving">Safety driving</string>
    <string name="share">Share</string>
    <string name="best_drive_ranking">Best drivers ranking</string>
    <string name="mileage_ranking">Mileage ranking</string>
    <string name="eco_driving_ranking">Eco-driving ranking</string>
    <string name="safety_driving_ranking">Safety driving ranking</string>
    <string name="local_ranking">Local ranking</string>
    <string name="global_ranking">Global ranking</string>
    <string name="go_to_my_position"><u>Go to my position</u></string>
    <string name="invite">Invite</string>
    <string name="invited">Invited</string>
    <string name="profile_visible">Public profile</string>
    <string name="profile_not_visible">Profile not visible</string>
    <string name="profile_only_friends">Profile only friends</string>
    <string name="title_activity_share">Share Activity</string>
    <string name="location">Location</string>
    <string name="check">Check</string>
    <string name="call_to_call_center">Call to Call Center</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="dealer">Dealer</string>
    <string name="all">All</string>
    <string name="near_to_you">Near you</string>
    <string name="friends">Friends</string>
    <string name="general_posts">General posts</string>
    <string name="friends_posts">Friends posts</string>
    <string name="invitations">Invitations</string>
    <string name="message_to_me">Messages to me</string>
    <string name="autosave">Autosave</string>
    <string name="planned">Planned</string>
    <string name="done">Done</string>
    <string name="favorites">Favorites</string>
    <string name="new_route">New route</string>
    <string name="select_all">Select all</string>
    <string name="edit_route">Edit route</string>
    <string name="add_to_favorite">Add to favorites</string>
    <string name="remove_from_favorite">Remove from favorites</string>
    <string name="share_route">Share route</string>
    <string name="share_autosaved_route">Share autosaved route</string>
    <string name="share_planned_route">Share planned route</string>
    <string name="share_done_route">Share done route</string>
    <string name="delete_route">Delete route</string>
    <string name="gps_is_necessary">Is necessary to activate the GPS in order to show your current location</string>
    <string name="cancel">Cancel</string>
    <string name="activate">Activate</string>
    <string name="autosaved_route">Autosave route</string>
    <string name="planned_route">Planned route</string>
    <string name="done_route">Done route</string>
    <string name="start">Start</string>
    <string name="information">Information</string>
    <string name="current_location">Current location</string>
    <string name="add_location">Add location</string>
    <string name="calculate">Calculate</string>
    <string name="error_retrieving_info_from_google_maps">Error retrieving info from Google Maps</string>
    <string name="error_retrieving_info_from_server">Error retrieving info from Server</string>
    <string name="please_select_locations">Please select locations</string>
    <string name="title_of_route">Title of the route *</string>
    <string name="save_route">Save route</string>
    <string name="description">Description</string>
    <string name="max_chars">max. 140</string>
    <string name="poi_type_hint">Beach, castle, danger, hotel…</string>
    <string name="title_point_of_interest">Title of point of interest *</string>
    <string name="type_point_of_interest">Type of point of interest *</string>
    <string name="add_picture">Add picture</string>
    <string name="new_point">New point</string>
    <string name="add_point_of_interest">Add point of interest</string>
    <string name="type_of_poi">Type of point of interest</string>
    <string name="finish_route">Finish route</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="active_filter">Active filter</string>
    <string name="title_activity_filters_favourites" translatable="false">FiltersFavouritesActivity</string>
    <string name="select_action">Select action</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_from_camera">Capture photo from camera</string>
    <string name="already_liked">Already liked</string>
    <string name="send_report">Report inappropriate post</string>
    <string name="send_report_correctly">Report sent correctly</string>
    <string name="hide">Hide</string>
    <string name="info">Info</string>
    <string name="block_user">Block user</string>
    <string name="select_route">Select route</string>
    <string name="title_activity_batges">Badges</string>
    <string name="behavior">Behavior</string>
    <string name="view_all">View all</string>
    <string name="connectech" translatable="false">ConnecTech</string>
</resources>