<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <com.otcengineering.white_app.components.CustomTabLayout
            android:id="@+id/my_routes_customTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tab1text="@string/autosave"
            app:tab2text="@string/planned"
            app:tab3text="@string/done"
            app:tab4text="@string/favorites" />

        <FrameLayout
            android:id="@+id/my_routes_layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</FrameLayout>
