<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <com.otcengineering.white_app.components.CustomTabLayout
            android:id="@+id/communications_customTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:showTabIndicator="true"
            app:tab1text="@string/search"
            app:tab2text="@string/posts"
            app:tab3text="@string/connectech"
            app:tab4text="@string/dealer" />

        <FrameLayout
            android:id="@+id/communications_layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</FrameLayout>