<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.BadgesActivity">

    <com.otcengineering.white_app.components.TitleBar
        android:id="@+id/badges_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titlebar_title="@string/title_activity_batges" />

    <com.otcengineering.white_app.components.CustomTabLayout
        android:id="@+id/badges_customTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showTabIndicator="false"
        app:layout_constraintTop_toBottomOf="@id/badges_titleBar"
        app:tab1text="@string/mileage"
        app:tab2text="@string/eco_driving"
        app:tab3text="@string/local_ranking"
        app:tab4text="@string/behavior" />

    <FrameLayout
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/badges_customTabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right"/>

    <FrameLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/left"
        app:layout_constraintTop_toBottomOf="@id/badges_customTabLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_rounded_height"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape_luis"
            android:drawableLeft="@drawable/arrow_dropdown"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserratnew"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/view_all"
            android:textAllCaps="false"
            android:textColor="@color/quantum_black_100"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/badges_listBadges"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/right"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!--Badges mode-->
</androidx.constraintlayout.widget.ConstraintLayout>