<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="105dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="65dp"

                    android:scaleType="centerCrop"
                    android:src="@drawable/triangle"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/sign_up_mayus"
                    android:textColor="@color/colorWhiteTrans"
                    android:layout_marginLeft="50dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_mayus"
                    android:textColor="@color/colorWhite"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@id/imageView4"
                    android:layout_gravity="bottom"
                    android:gravity="end"
                    android:layout_marginRight="50dp"
                    android:textSize="18dp"
                    />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/txtLoginDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="8dp"
            android:text="@string/obligation"
            android:textAlignment="textEnd"
            android:textSize="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nicknamest" />

                <TextView
                    android:id="@+id/txtError1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/error"
                    android:paddingTop="2dp"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="15dp"
                    android:visibility="invisible" />

            </LinearLayout>
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="3.98"
                android:backgroundTint="@color/strokeButton"
                android:drawableRight="@drawable/ic_clear_black_24dp"
                android:ems="10"
                android:hint="@string/pseudonym"
                android:textColorHint="#afafb4"
                android:textSize="15dp"

                android:inputType="textPersonName"
                android:textColor="@color/quantum_black_100"
                android:textCursorDrawable="@null"
                android:typeface="normal"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/passwordst" />

                <TextView
                    android:id="@+id/txtError2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="@color/error"
                    android:paddingTop="2dp"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="15dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="3.98"
                android:backgroundTint="@color/strokeButton"
                android:drawableRight="@drawable/ic_clear_black_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/quantum_black_100"

                android:textColorHint="#afafb4"
                android:textCursorDrawable="@null"
                android:textSize="15dp"
                android:typeface="normal" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:textAlignment="textEnd"
            android:text="@string/forgot"
            android:textColor="@color/forgotPass" />





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

        <Button
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/textButton"
            android:textSize="18sp"
            android:stateListAnimator="@null"/>

        </RelativeLayout>

    </LinearLayout>


</android.widget.ScrollView>